src/test/ui/unboxed-closures/unboxed-closure-illegal-move.stderr
error[E0507]: cannot move out of `x`, a captured variable in an `Fn` closure
  --> $DIR/unboxed-closure-illegal-move.rs:15:31
   |
LL |         let x = Box::new(0);
   |             - captured outer variable
LL |         let f = to_fn(|| drop(x));
   |                               ^ move occurs because `x` has type `std::boxed::Box<i32>`, which does not implement the `Copy` trait

error[E0507]: cannot move out of `x`, a captured variable in an `FnMut` closure
  --> $DIR/unboxed-closure-illegal-move.rs:19:35
   |
LL |         let x = Box::new(0);
   |             - captured outer variable
LL |         let f = to_fn_mut(|| drop(x));
   |                                   ^ move occurs because `x` has type `std::boxed::Box<i32>`, which does not implement the `Copy` trait

error[E0507]: cannot move out of `x`, a captured variable in an `Fn` closure
  --> $DIR/unboxed-closure-illegal-move.rs:28:36
   |
LL |         let x = Box::new(0);
   |             - captured outer variable
LL |         let f = to_fn(move || drop(x));
   |                                    ^ move occurs because `x` has type `std::boxed::Box<i32>`, which does not implement the `Copy` trait

error[E0507]: cannot move out of `x`, a captured variable in an `FnMut` closure
  --> $DIR/unboxed-closure-illegal-move.rs:32:40
   |
LL |         let x = Box::new(0);
   |             - captured outer variable
LL |         let f = to_fn_mut(move || drop(x));
   |                                        ^ move occurs because `x` has type `std::boxed::Box<i32>`, which does not implement the `Copy` trait

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0507`.
